--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="{{ page.description }}">
-    <title>{{ page.title }} - SoloDevelopment</title>
-    <link rel="stylesheet" href="{{ site.baseurl }}/css/style.css">
+    <title>{{ page.title }} - {{ site.title }}</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     {{ content }}
