--- a/includes/header.html
+++ b/includes/header.html
@@ -4,9 +4,9 @@
         <h1 class="site-title">SoloDevelopment.org</h1>
         <nav>
             <ul>
-                <li><a href="{{ site.baseurl }}/">Home</a></li>
-                <li><a href="{{ site.baseurl }}/events/">Events</a></li>
-                <li><a href="{{ site.baseurl }}/hall-of-fame/">Hall of Fame</a></li>
+                <li><a href="/">Home</a></li>
+                <li><a href="/events/">Events</a></li>
+                <li><a href="/hall-of-fame/">Hall of Fame</a></li>
                 <li><a href="https://discord.gg/4R5bB9nMSV">Discord</a></li>
             </ul>
         </nav>
