--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -19,7 +19,7 @@
         <div class="footer-section">
             <h4>About</h4>
             <ul>
-                <li><a href="https://practicalnpc.itch.io/">Managed by PracticalNPC</a></li>
+                <li><a href="https://practicalmedia.io/p/article-application">Get an article published</a></li>
                 <li><a href="https://github.com/SoloDevelopmentCommunity">GitHub</a></li>
             </ul>
         </div>
